[gd_scene load_steps=25 format=2]

[ext_resource path="res://levels/Level.gd" type="Script" id=1]
[ext_resource path="res://objects/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/DoubleEnemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://rockets/Rocket.tscn" type="PackedScene" id=4]
[ext_resource path="res://rockets/MiniRocket.tscn" type="PackedScene" id=5]
[ext_resource path="res://rockets/ShieldRocket.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/Powerup.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/HpPowerup.tscn" type="PackedScene" id=8]
[ext_resource path="res://levels/GUI.gd" type="Script" id=9]
[ext_resource path="res://fonts/SmallFont.tres" type="DynamicFont" id=10]
[ext_resource path="res://fonts/DefaultFont.tres" type="DynamicFont" id=11]
[ext_resource path="res://images/Flames1.png" type="Texture" id=12]
[ext_resource path="res://images/Flames2.png" type="Texture" id=13]
[ext_resource path="res://images/Flames3.png" type="Texture" id=14]
[ext_resource path="res://images/Enemy.png" type="Texture" id=15]
[ext_resource path="res://images/Powerup Icon.png" type="Texture" id=16]
[ext_resource path="res://images/Life Icon.png" type="Texture" id=17]
[ext_resource path="res://gui/InstructionArrows.tscn" type="PackedScene" id=18]
[ext_resource path="res://images/MiniRocket.png" type="Texture" id=19]
[ext_resource path="res://gui/PauseMenu.tscn" type="PackedScene" id=20]
[ext_resource path="res://gui/ParallaxBackground.tscn" type="PackedScene" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.00784314, 0.517647, 0.00392157, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.776471, 0.0470588, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.109804, 0.682353, 0.0117647, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Level" type="Node"]
script = ExtResource( 1 )
Enemy = ExtResource( 2 )
DoubleEnemy = ExtResource( 3 )
Rocket = ExtResource( 4 )
MiniRocket = ExtResource( 5 )
ShieldRocket = ExtResource( 6 )
Powerup = ExtResource( 7 )
HpPowerup = ExtResource( 8 )

[node name="GUI" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 9 )

[node name="MouseStart" type="Polygon2D" parent="GUI"]
visible = false
modulate = Color( 1, 1, 1, 0.588235 )
scale = Vector2( 2, 2 )
color = Color( 0.666667, 0.666667, 0.666667, 1 )
polygon = PoolVector2Array( 0, 10, 7, 7, 10, 0, 7, -7, 0, -10, -7, -7, -10, 0, -7, 7, 0, 10 )

[node name="MouseStart2" type="Polygon2D" parent="GUI/MouseStart"]
visible = false
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 0, 10, 7, 7, 10, 0, 7, -7, 0, -10, -7, -7, -10, 0, -7, 7, 0, 10 )

[node name="PauseButton" type="Button" parent="GUI"]
pause_mode = 1
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
custom_fonts/font = ExtResource( 10 )
text = "Pause"

[node name="BackButton" type="Button" parent="GUI"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_bottom = 55.0
rect_min_size = Vector2( 100, 55 )
custom_fonts/font = ExtResource( 10 )
text = "Menu"

[node name="RocketQueue" type="VBoxContainer" parent="GUI"]
pause_mode = 1
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -310.0
margin_right = 64.0
margin_bottom = -26.0
custom_constants/separation = 5

[node name="RocketQLabel" type="Label" parent="GUI/RocketQueue"]
margin_right = 62.0
margin_bottom = 22.0
rect_min_size = Vector2( 50, 20 )
custom_fonts/font = ExtResource( 10 )
text = "Rockets"

[node name="Rocket1" type="Button" parent="GUI/RocketQueue"]
margin_top = 27.0
margin_right = 62.0
margin_bottom = 87.0
rect_min_size = Vector2( 50, 60 )

[node name="Rocket2" type="Button" parent="GUI/RocketQueue"]
margin_top = 92.0
margin_right = 62.0
margin_bottom = 152.0
rect_min_size = Vector2( 50, 60 )

[node name="Rocket3" type="Button" parent="GUI/RocketQueue"]
margin_top = 157.0
margin_right = 62.0
margin_bottom = 217.0
rect_min_size = Vector2( 50, 60 )

[node name="GestureDescription" type="Label" parent="GUI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -22.0
rect_min_size = Vector2( 100, 20 )
custom_fonts/font = ExtResource( 10 )
align = 1

[node name="ScoreLabel" type="Label" parent="GUI"]
margin_right = 40.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 10 )

[node name="Instruction" type="Label" parent="GUI"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -300.0
margin_bottom = -200.0
custom_fonts/font = ExtResource( 11 )
align = 1
autowrap = true

[node name="Examples" type="Node2D" parent="GUI"]
visible = false
position = Vector2( 58.932, 375 )

[node name="Enemy" type="Label" parent="GUI/Examples"]
margin_left = 30.0
margin_right = 83.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 10 )
text = "Enemy"

[node name="Flames" type="AnimatedSprite" parent="GUI/Examples/Enemy"]
position = Vector2( 25.1539, 31.8273 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
playing = true
flip_v = true

[node name="Sprite" type="Sprite" parent="GUI/Examples/Enemy"]
position = Vector2( 25.0681, 60.1808 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 15 )

[node name="Powerup" type="Label" parent="GUI/Examples"]
margin_left = 140.0
margin_right = 221.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 10 )
text = "Power Cell"
align = 1

[node name="Sprite" type="Sprite" parent="GUI/Examples/Powerup"]
position = Vector2( 42.0914, 59.407 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )

[node name="HPPowerup" type="Label" parent="GUI/Examples"]
margin_left = 270.0
margin_right = 363.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 10 )
text = "Repair Pack"
align = 1

[node name="Sprite" type="Sprite" parent="GUI/Examples/HPPowerup"]
position = Vector2( 44.4128, 53.9906 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="GUI/Examples/HPPowerup"]
margin_left = 48.7484
margin_top = 23.2135
margin_right = 88.7484
margin_bottom = 50.2135
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 1, 0.0862745, 1 )
text = "+1"

[node name="SkipInstructions" type="Button" parent="GUI"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -106.0
margin_top = 725.0
margin_right = -3.0
margin_bottom = 780.0
rect_min_size = Vector2( 100, 55 )
custom_fonts/font = ExtResource( 10 )
text = "Skip"

[node name="Arrows" parent="GUI" instance=ExtResource( 18 )]
visible = false

[node name="DistanceBar" type="ProgressBar" parent="GUI"]
margin_left = -0.59874
margin_top = 22.0
margin_right = 149.401
margin_bottom = 36.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
percent_visible = false

[node name="Sprite" type="Sprite" parent="GUI/DistanceBar"]
position = Vector2( 0, 8 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 19 )

[node name="PauseMenu" parent="GUI" instance=ExtResource( 20 )]
visible = false

[node name="Hp" type="Sprite" parent="GUI"]
visible = false
position = Vector2( 10, 480 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 17 )

[node name="HpLabel" type="Label" parent="GUI"]
margin_top = 450.0
margin_right = 22.0
margin_bottom = 472.0
custom_fonts/font = ExtResource( 10 )
text = "HP"

[node name="ParallaxBackground" parent="." instance=ExtResource( 21 )]
[connection signal="pressed" from="GUI/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="GUI/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="GUI/RocketQueue/Rocket1" to="." method="_on_Rocket1_pressed"]
[connection signal="pressed" from="GUI/RocketQueue/Rocket2" to="." method="_on_Rocket2_pressed"]
[connection signal="pressed" from="GUI/RocketQueue/Rocket3" to="." method="_on_Rocket3_pressed"]
[connection signal="pressed" from="GUI/SkipInstructions" to="." method="_on_SkipInstructions_pressed"]
